--- a/foundations/Calculator/index.html
+++ b/foundations/Calculator/index.html
@@ -27,7 +27,7 @@
         <button onclick="getSymbol('7')">7</button>
         <button onclick="getSymbol('8')">8</button>
         <button onclick="getSymbol('9')">9</button>
-        <div></div>
+        <button onclick="getSymbol('.')">.</button>
         <button onclick="getSymbol(0)">0</button>
       </div>
     </div>
