--- a/foundations/Calculator/index.html
+++ b/foundations/Calculator/index.html
@@ -17,7 +17,7 @@
         <button onclick="getSymbol('-')">-</button>
         <button onclick="getSymbol('*')">*</button>
         <button onclick="getSymbol('/')">/</button>
-        <button onclick="getResult()">=</button>
+        <button onclick="removeItem()">BS</button>
         <button onclick="getSymbol('1')">1</button>
         <button onclick="getSymbol('2')">2</button>
         <button onclick="getSymbol('3')">3</button>
@@ -29,6 +29,7 @@
         <button onclick="getSymbol('9')">9</button>
         <button onclick="getSymbol('.')">.</button>
         <button onclick="getSymbol(0)">0</button>
+        <button onclick="getResult()">=</button>
       </div>
     </div>
   </body>
